# radixmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: 32bitsVersion.c  64bitsVersion.c
include/: radixmp.h
src/: radixmp.c
